<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/statusbar_white"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95px"
        android:background="@color/statusbar_white">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16px"
            android:gravity="center">

            <ImageView

                android:layout_width="60px"
                android:layout_height="60px"
                android:src="@drawable/header_back_black" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80px"
        android:layout_marginTop="110px">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/email_reg"
            android:textColor="@color/login_reg_font"
            android:textSize="64px" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106px"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66px"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="@color/login_reg_email"
            android:textSize="34px" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80px"
            android:background="@string/no_edit_bg"
            android:focusableInTouchMode="true"
            android:hint="@string/input_email_add"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:nextFocusForward="@+id/et_express_receiver_address"
            android:singleLine="true"
            android:textColor="@color/login_reg_email"
            android:textColorHint="@color/login_reg_email_hint"
            android:textSize="32px" />

    </LinearLayout>

    <View
        style="@style/DividerHorizontal"
        android:layout_height="1dp"
        android:layout_marginLeft="46px"
        android:layout_marginRight="46px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106px"
        android:layout_marginTop="12px"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66px"
            android:text="@string/pwd"
            android:textColor="@color/login_reg_email"
            android:textSize="34px" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80px"
            android:background="@string/no_edit_bg"
            android:focusableInTouchMode="true"
            android:hint="@string/please_set_pwd"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/login_reg_email"
            android:textColorHint="@color/login_reg_email_hint"
            android:textSize="32px" />


        <!--     android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLines="1"
            android:nextFocusForward="@+id/et_express_receiver_address"-->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="46px"
        android:layout_marginRight="46px"
        android:background="#dedfe0" />

    <Button
        android:id="@+id/regist"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="46px"
        android:layout_marginRight="46px"
        android:layout_marginTop="64px"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#c8e2f8" />
    <!--粗体-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/reg_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="46px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"

                android:text="@string/reg_is_ok"
                android:textColor="@color/reg_is_ni_ok"
                android:textSize="26px" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/music_http"
                android:textColor="@color/longin_bgnom"
                android:textSize="26px" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

