<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <!--colorwhite-->


    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:background="@drawable/llinear"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="84px"
            android:gravity="center_horizontal"
            android:text="@string/confirm_exit"
            android:textColor="@color/login_reg_font"
            android:textSize="30px" />

        <View
            android:layout_marginTop="80px"
            style="@style/DividerHorizontal"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"


            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95px">

            <Button
                android:id="@+id/bt_no"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/logout_dialog"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#777777"
                android:textSize="30px" />

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rightlogout_dialog"
                android:gravity="center"
                android:text="@string/confirm2"
                android:textColor="@color/longin_bgnom"
                android:textSize="30px" />
        </LinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>


</com.zhy.autolayout.AutoRelativeLayout>